--- a/loveXuan/ym.html
+++ b/loveXuan/ym.html
@@ -150,7 +150,8 @@
 			new Date(2020, 7, 2),
 			new Date(2020, 7, 30),
 			new Date(2020, 9, 1),
-			new Date(2020, 10, 1)
+			new Date(2020, 10, 1),
+			new Date(2020, 10, 27)
 		];
 		function gap(d1, d2) {	//计算两个日期见的间隔
 			return Math.ceil((d2.getTime() - d1.getTime()) / (24 * 60 * 60 * 1000));
