--- a/loveXuan/ym.html
+++ b/loveXuan/ym.html
@@ -153,7 +153,8 @@
 			new Date(2020, 10, 1),
 			new Date(2020, 10, 27),
 			new Date(2020, 11, 26),
-			new Date(2021, 0, 24)
+			new Date(2021, 0, 24),
+			new Date(2021, 1, 20)
 		];
 		function gap(d1, d2) {	//计算两个日期见的间隔
 			return Math.ceil((d2.getTime() - d1.getTime()) / (24 * 60 * 60 * 1000));
