--- a/loveXuan/ym.html
+++ b/loveXuan/ym.html
@@ -155,7 +155,50 @@
 			new Date(2020, 11, 26),
 			new Date(2021, 0, 24),
 			new Date(2021, 1, 20),
-			new Date(2021, 2, 22)
+			new Date(2021, 2, 22),
+			new Date(2021, 3, 19),
+			new Date(2021, 4, 19),
+			new Date(2021, 5, 15),
+			new Date(2021, 6, 15),
+			new Date(2021, 7, 12),
+			new Date(2021, 8, 11),
+			new Date(2021, 9, 12),
+			new Date(2021, 10, 10),
+			new Date(2021, 11, 10),
+			new Date(2022, 0, 7),
+			new Date(2022, 1, 7),
+			new Date(2022, 2, 8),
+			new Date(2022, 3, 6),
+			new Date(2022, 4, 6),
+			new Date(2022, 5, 5),
+			new Date(2022, 6, 5),
+			new Date(2022, 7, 3),
+			new Date(2022, 8, 2),
+			new Date(2022, 9, 1),
+			new Date(2022, 10, 1),
+			new Date(2022, 11, 1),
+			new Date(2022, 11, 28),
+			new Date(2023, 0, 26),
+			new Date(2023, 1, 24),
+			new Date(2023, 2, 24),
+			new Date(2023, 3, 20),
+			new Date(2023, 4, 20),
+			new Date(2023, 5, 20),
+			new Date(2023, 6, 23),
+			new Date(2023, 7, 22),
+			new Date(2023, 8, 18),
+			new Date(2023, 9, 16),
+			new Date(2023, 10, 13),
+			new Date(2023, 11, 13),
+			new Date(2024, 0, 9),
+			new Date(2024, 1, 8),
+			new Date(2024, 2, 13),
+			new Date(2024, 3, 9),
+			new Date(2024, 4, 7),
+			new Date(2024, 5, 3),
+			new Date(2024, 6, 3),
+			new Date(2024, 6, 30),
+			new Date(2024, 7, 27)
 		];
 		function gap(d1, d2) {	//计算两个日期见的间隔
 			return Math.ceil((d2.getTime() - d1.getTime()) / (24 * 60 * 60 * 1000));
