--- a/loveXuan/ym.html
+++ b/loveXuan/ym.html
@@ -199,7 +199,8 @@
 			new Date(2024, 6, 3),
 			new Date(2024, 6, 30),
 			new Date(2024, 7, 27),
-			new Date(2024, 8, 27)
+			new Date(2024, 8, 27),
+			new Date(2024, 9, 26)
 		];
 		function gap(d1, d2) {	//计算两个日期见的间隔
 			return Math.ceil((d2.getTime() - d1.getTime()) / (24 * 60 * 60 * 1000));
