--- a/loveXuan/ym.html
+++ b/loveXuan/ym.html
@@ -202,7 +202,8 @@
 			new Date(2024, 8, 27),
 			new Date(2024, 9, 26),
 			new Date(2024, 10, 26),
-			new Date(2024, 11, 22)
+			new Date(2024, 11, 22),
+			new Date(2025, 0, 20),
 		];
 		function gap(d1, d2) {	//计算两个日期见的间隔
 			return Math.ceil((d2.getTime() - d1.getTime()) / (24 * 60 * 60 * 1000));
