--- a/loveXuan/ym.html
+++ b/loveXuan/ym.html
@@ -205,6 +205,9 @@
 			new Date(2024, 11, 22),
 			new Date(2025, 0, 20),
 			new Date(2025, 1, 24),
+			new Date(2025, 2, 26),
+			new Date(2025, 3, 28),
+			new Date(2025, 4, 28)
 		];
 		function gap(d1, d2) {	//计算两个日期见的间隔
 			return Math.ceil((d2.getTime() - d1.getTime()) / (24 * 60 * 60 * 1000));
