--- a/loveXuan/ym.html
+++ b/loveXuan/ym.html
@@ -209,6 +209,7 @@
 			new Date(2025, 3, 28),
 			new Date(2025, 4, 28),
 			new Date(2025, 5, 27),
+			new Date(2025, 6, 27),
 		];
 		function gap(d1, d2) {	//计算两个日期见的间隔
 			return Math.ceil((d2.getTime() - d1.getTime()) / (24 * 60 * 60 * 1000));
